--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+  /*margin: 0;*/
+  /*border: 0;*/
+}
+
+input, button, a {
+  outline: none;
+}
+
+a {
+  text-decoration: none
+}
+
+ul li {
+  list-style: none;
+}
